# bench-stability-monitor

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebooks/: check_baseline.py  check_data.py  check_right_trajectory.py  check_tilt.py  check_trajectory.py  check_wrist_motion.py  check_wrist_relation.py  detection_test.py  extract_coordinates.py  generate_overlay.py  run_analysis.py
src/analysis/: tilt.py  trajectory.py
src/detection/: detector.py  plate_tracker.py
src/engine/: event_detector.py  risk_scorer.py
src/utils/: config.py  video.py
src/visualization/: overlay_video.py
