[project]
name = "bench-stability-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "ultralytics>=8.4.62",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]
